updated why-us spacing and title issue

--- a/wp-content/themes/smashburger/css/main.css
+++ b/wp-content/themes/smashburger/css/main.css
@@ -2808,7 +2808,7 @@ body.page-template-template_smashclub-php  {
 	color:#ffffff;
 	padding-left: 1em;
 	text-transform: uppercase;
-	font-size: 250%;
+	font-size: 230%;
 	font-weight: 800; 
 	line-height: 2em;
 	margin:0;
